tests/samples/negative/traits/trait_associated_type_missing_bound.ax
module trait_associated_type_missing_bound;

trait Source {
    type Item;
}

fn use_item<T>(value: T) -> T.Item {
    return value;
}

fn main() -> i32 {
    return 0;
}
